objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Month__c</fullName>
        <description>Month of Activity displayed as the first date of that month.</description>
        <formula>ActivityDate-DAY(ActivityDate)+1</formula>
        <label>Activity Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <description>Requested by Bennett 5/16/2022. Field to hold attendees names who are not in the Name field.</description>
        <inlineHelpText>Enter the names of people who attended the meeting who are not in the Name field.</inlineHelpText>
        <label>Attendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeUuid__c</fullName>
        <externalId>true</externalId>
        <label>InviteeUuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__IsRescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <inlineHelpText>This field is created to log the Phone Label in Orum.</inlineHelpText>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone Call Connected</fullName>
                </value>
                <value>
                    <fullName>Phone Call Left No Voice Message</fullName>
                </value>
                <value>
                    <fullName>Phone Call Left Voice Message</fullName>
                </value>
                <value>
                    <fullName>Requested Callback later</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Address__c</fullName>
        <inlineHelpText>For Physical Gift only.</inlineHelpText>
        <label>Contact Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Role_Name__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is created  for reporting purpose.</inlineHelpText>
        <label>Created By Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_to_Oppty_Created_Age_Days__c</fullName>
        <formula>IF( ISBLANK(Related_Opportunity__c), &apos;No Oppty Created&apos; , TEXT(DATEVALUE( Related_Opportunity__r.CreatedDate) - Date_DC_Held__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days from DC held to Oppty created.</inlineHelpText>
        <label>DC to Oppty Created Age (Days)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_DC_Held__c</fullName>
        <inlineHelpText>Date Discovery Call is Scheduled For/Completed</inlineHelpText>
        <label>Date DC Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Held__c</fullName>
        <inlineHelpText>Date Demo is Perfomed</inlineHelpText>
        <label>Date Demo Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Intro_Call_Held__c</fullName>
        <label>Date of Intro Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_to_Oppty_Created_Age_Days__c</fullName>
        <formula>IF( ISBLANK(Related_Opportunity__c), &apos;No Oppty Created&apos; , TEXT(DATEVALUE( Related_Opportunity__r.CreatedDate) - Date_Demo_Held__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days from Demo held to Oppty created.</inlineHelpText>
        <label>Demo to Oppty Created Age (Days)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <formula>IF(ISPICKVAL( CallType , &quot;Inbound&quot;),5,
  CASE( CallDisposition,
     &quot;Conversation&quot;, 5,
     &quot;Interest, Call Back Later&quot;, 5,
     &quot;Referral&quot;,5,
     &quot;Interest, Send Information&quot;,5,
     &quot;Said to Call Back&quot;,5,
       CASE( RecordType.Name,
        &quot;Demo&quot;,50,
        &quot;Discovery Call&quot;,50,
        &quot;Intro Call&quot;,50,
0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Message__c</fullName>
        <inlineHelpText>Message to include with gift to recipient. Consider including a call to action.</inlineHelpText>
        <label>Gift Message</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Gift</fullName>
                </value>
                <value>
                    <fullName>eGift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_URL__c</fullName>
        <inlineHelpText>Link to specific gift to send.</inlineHelpText>
        <label>Gift URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <inlineHelpText>USD only</inlineHelpText>
        <label>Gift Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interactions__c</fullName>
        <description>Interactions counter for reporting purpose</description>
        <formula>IF( ISPICKVAL( Call_Status__c , &apos;Answered&apos;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Created_Same_as_Logged_In_User__c</fullName>
        <formula>If( CreatedBy.Id = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is created for reporting purpose.</inlineHelpText>
        <label>Is Created Same as Logged In User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Type__c</fullName>
        <inlineHelpText>The field created for reporting purposes. Stamp lead/account type from respective lead/contact records via a flow.</inlineHelpText>
        <label>Lead/Contact Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Recap_Cont_d__c</fullName>
        <label>Meeting Recap Cont&apos;d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Recap_Continued__c</fullName>
        <inlineHelpText>Activity text areas only allow 255 characters so this requires multiple fields</inlineHelpText>
        <label>Meeting Recap Continued</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Recap__c</fullName>
        <inlineHelpText>Limited to 255 characters only.</inlineHelpText>
        <label>Meeting Recap (limited to 255 char)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>Prospect Meeting</fullName>
                </value>
                <value>
                    <fullName>Solution Architect Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE_to_Reschedule</fullName>
                    <label>AE to Reschedule</label>
                </value>
                <value>
                    <fullName>Back to the Marketing</fullName>
                </value>
                <value>
                    <fullName>Create Opportunity</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Partnership In Progress</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Self Gen Prospect - Rep to Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>Number of ARM and/or Vault Users</description>
        <inlineHelpText>Enter numeric value only.</inlineHelpText>
        <label>Number of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <formula>Related_Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Task_Type__c</fullName>
        <inlineHelpText>LinkedIn Task Mapping from Outreach.io</inlineHelpText>
        <label>Outreach Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn: View a Profile</fullName>
                </value>
                <value>
                    <fullName>LinkedIn: Send Message</fullName>
                </value>
                <value>
                    <fullName>LinkedIn: Send Connection Request</fullName>
                </value>
                <value>
                    <fullName>LinkedIn: Interact with Post</fullName>
                </value>
                <value>
                    <fullName>LinkedIn: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
                <value>
                    <fullName>ARM and Vault</fullName>
                </value>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Questions_Objections__c</fullName>
        <label>Prospect Questions/Objections</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ramble__Ramble_Chat_Type__c</fullName>
        <description>Ramble Chat Type</description>
        <label>Ramble Chat Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Answered</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ramble__Ramble_Chat_URL__c</fullName>
        <description>Ramble Chat URL</description>
        <label>Ramble Chat URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Reason for sending it to Back to the Marketing.</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Next_Step__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>No Product Fit</fullName>
                </value>
                <value>
                    <fullName>Needs Nurturing</fullName>
                </value>
                <value>
                    <fullName>No BANT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select existing opportunity to associate with this activity.</inlineHelpText>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.WhatId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DC and Demo Activities</relationshipLabel>
        <relationshipName>DC_Demo_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <label>SDR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Notes__c</fullName>
        <label>Sales Rep Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Share_Meeting_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Meeting Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Successful_Intro_Call__c</fullName>
        <formula>IF(  RecordType.Name = &quot;Intro Call&quot; &amp;&amp; (TEXT(Next_Step__c)=&quot;Demo&quot;||TEXT(Next_Step__c)=&quot;Create Opportunity&quot;),TRUE,FALSE)</formula>
        <label>Successful Intro Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminus_Company__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminus_Domain__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus_Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Terminus_Email__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Terminus_Phone__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terminus_Subject__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminus_Type__c</fullName>
        <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
        <label>Terminus Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_We_Taught_Them__c</fullName>
        <description>What we taught them section of meeting report</description>
        <label>What We Taught Them</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Chat</value>
        </filters>
        <label>All Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSM_Task_Type</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>CSM Follow-up</value>
        </filters>
        <label>CSM Task Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_Call_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Date_Demo_Held__c</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Demo</value>
        </filters>
        <label>Demo Call Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Discovery_Call_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Date_DC_Held__c</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Discovery Call</value>
        </filters>
        <label>Discovery Call Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Gift_Request_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filters>
        <label>Gift Request Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Intro_Call_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Date_Intro_Call_Held__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Intro Call</value>
        </filters>
        <label>Intro Call Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LinkedIn_InMail_Activities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>InMail Sent</value>
        </filters>
        <label>LinkedIn InMail Activities</label>
        <language>en_US</language>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Intro_Call_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Date_Intro_Call_Held__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Intro Call</value>
        </filters>
        <label>My Intro Call Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Tasks (Upcoming+Overdue)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Outreach_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Outreach</value>
        </filters>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Call,Email,Other</value>
        </filters>
        <label>My Outreach Activities</label>
        <language>en_US</language>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Upcoming_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>My Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Upcoming_Tasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Upcoming Tasks</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>